--- a/SportsOrganizer.Server/Resources/Components/Setup/BasicInfoSetupComponent/BasicInfoSetup.sl.resx
+++ b/SportsOrganizer.Server/Resources/Components/Setup/BasicInfoSetupComponent/BasicInfoSetup.sl.resx
@@ -124,7 +124,7 @@
     <value>Shrani in nadaljuj</value>
   </data>
   <data name="BtnReset" xml:space="preserve">
-    <value>Ponastaviti</value>
+    <value>Ponastavi</value>
   </data>
   <data name="ChooseFile" xml:space="preserve">
     <value>Izberite datoteko</value>
