--- a/SportsOrganizer.Server/Resources/Components/Setup/ThemeSetupComponent/ThemeSetup.sl.resx
+++ b/SportsOrganizer.Server/Resources/Components/Setup/ThemeSetupComponent/ThemeSetup.sl.resx
@@ -121,7 +121,7 @@
     <value>Predogled</value>
   </data>
   <data name="BtnSelect" xml:space="preserve">
-    <value>Izberite Tema</value>
+    <value>Izberite Temo</value>
   </data>
   <data name="Instructions" xml:space="preserve">
     <value>Izberite temo za svojo aplikacijo (pozneje jo lahko spremenite)</value>
