--- a/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResultsSelector.sl.resx
+++ b/SportsOrganizer.Server/Resources/Pages/User/InsertActivityResultsSelector.sl.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="PageTitle" xml:space="preserve">
-    <value>Vstavi izbirnik rezultatov dejavnosti</value>
+    <value>Izbirnik vstavljanja rezultatov nalog</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Izberite dejavnost za vstavljanje rezultatov</value>
