--- a/SportsOrganizer.Server/Resources/Components/ActivityPreviewComponent/ActivityPreview.sl.resx
+++ b/SportsOrganizer.Server/Resources/Components/ActivityPreviewComponent/ActivityPreview.sl.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Activity" xml:space="preserve">
-    <value>dejavnost</value>
+    <value>Naloga</value>
   </data>
   <data name="Location" xml:space="preserve">
     <value>Lokacija</value>
@@ -130,6 +130,6 @@
     <value>Poglej več</value>
   </data>
   <data name="SelectActivity" xml:space="preserve">
-    <value>Izberite dejavnost</value>
+    <value>Izberi nalogo</value>
   </data>
 </root>
