--- a/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminActivityResultEditModalComponent/AdminActivityResultEditModal.sl.resx
+++ b/SportsOrganizer.Server/Resources/Components/AdminComponents/AdminActivityResultEditModalComponent/AdminActivityResultEditModal.sl.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Activity" xml:space="preserve">
-    <value>dejavnost:</value>
+    <value>Naloga:</value>
   </data>
   <data name="AddTitle" xml:space="preserve">
     <value>Dodajte rezultat</value>
@@ -136,7 +136,7 @@
     <value>Razdaljo vnesite v obliki zapisani v pravilih.</value>
   </data>
   <data name="DuplicateWarning" xml:space="preserve">
-    <value>Podvojeno opozorilo!</value>
+    <value>Opozorilo o možni podvojenosti!</value>
   </data>
   <data name="EditTitle" xml:space="preserve">
     <value>Uredi rezultat</value>
@@ -157,7 +157,7 @@
     <value>Spremembe uspešno shranjene!</value>
   </data>
   <data name="Team" xml:space="preserve">
-    <value>ekipa:</value>
+    <value>Ekipa:</value>
   </data>
   <data name="TimeText" xml:space="preserve">
     <value>Čas vnesite v obliki, ki je zapisana v pravilih in izbrana v nastavitvah brskalnika (npr. 123,45).</value>
