--- a/SportsOrganizer.Server/Resources/Pages/ActivityDetails.sl.resx
+++ b/SportsOrganizer.Server/Resources/Pages/ActivityDetails.sl.resx
@@ -118,10 +118,10 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Activity" xml:space="preserve">
-    <value>dejavnost</value>
+    <value>Naloga</value>
   </data>
   <data name="BackToAll" xml:space="preserve">
-    <value>Nazaj na vse dejavnosti</value>
+    <value>Nazaj na vse naloge</value>
   </data>
   <data name="Location" xml:space="preserve">
     <value>Lokacija</value>
