--- a/SportsOrganizer.Server/Resources/Pages/ActivityResults.sl.resx
+++ b/SportsOrganizer.Server/Resources/Pages/ActivityResults.sl.resx
@@ -118,13 +118,13 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Activity" xml:space="preserve">
-    <value>dejavnost</value>
+    <value>Naloga</value>
   </data>
   <data name="Location" xml:space="preserve">
     <value>Lokacija</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Rezultati dejavnosti</value>
+    <value>Rezultati naloge</value>
   </data>
   <data name="PlaceOfRanking" xml:space="preserve">
     <value>Mesto uvrstitve</value>
