--- a/SportsOrganizer.Server/Resources/Pages/Admin/ActivityEditor.sl.resx
+++ b/SportsOrganizer.Server/Resources/Pages/Admin/ActivityEditor.sl.resx
@@ -118,22 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ActivityNumber" xml:space="preserve">
-    <value>Številka dejavnosti</value>
+    <value>Številka naloge</value>
   </data>
   <data name="ActivityType" xml:space="preserve">
-    <value>Vrsta dejavnosti</value>
+    <value>Vrsta naloge</value>
   </data>
   <data name="Ascending" xml:space="preserve">
     <value>Naraščajoče</value>
   </data>
   <data name="BtnAdd" xml:space="preserve">
-    <value>Dodaj dejavnost</value>
+    <value>Dodaj nalogo</value>
   </data>
   <data name="BtnDelete" xml:space="preserve">
     <value>Izbriši</value>
   </data>
   <data name="BtnDeleteAll" xml:space="preserve">
-    <value>Izbriši vse dejavnosti</value>
+    <value>Izbriši vse naloge</value>
   </data>
   <data name="BtnEdit" xml:space="preserve">
     <value>Uredi</value>
@@ -160,16 +160,16 @@
     <value>Potrdi</value>
   </data>
   <data name="ConfModalContent" xml:space="preserve">
-    <value>Ali res želite izbrisati vse dejavnosti?</value>
+    <value>Ali res želite izbrisati vse naloge?</value>
   </data>
   <data name="ConfModalHeader" xml:space="preserve">
-    <value>Potrdite izbris vseh dejavnosti</value>
+    <value>Potrdite izbris vseh nalog</value>
   </data>
   <data name="DataExportAndPrintingTitle" xml:space="preserve">
     <value>Izvoz in tiskanje podatkov</value>
   </data>
   <data name="Descending" xml:space="preserve">
-    <value>Sestopanje</value>
+    <value>Padanje</value>
   </data>
   <data name="Distance" xml:space="preserve">
     <value>Razdalja</value>
@@ -202,25 +202,25 @@
     <value>Vrsta naročila</value>
   </data>
   <data name="p1" xml:space="preserve">
-    <value>Dobrodošli na strani urejevalnika dejavnosti!</value>
+    <value>Dobrodošli na strani urejevalnika nalog!</value>
   </data>
   <data name="p2" xml:space="preserve">
-    <value>Ta stran vam omogoča urejanje dejavnosti, ki jih morajo opraviti tekmovalne ekipe na vašem športnem dogodku. S priloženim urejevalnikom lahko po potrebi enostavno dodajate, urejate ali brišete dejavnosti.</value>
+    <value>Ta stran vam omogoča urejanje nalog, ki jih morajo opraviti tekmovalne ekipe na vašem športnem dogodku. S priloženim urejevalnikom lahko po potrebi enostavno dodajate, urejate ali brišete naloge.</value>
   </data>
   <data name="p3" xml:space="preserve">
-    <value>Dodajanje nove dejavnosti je preprosto - samo kliknite gumb »Dodaj dejavnost« in izpolnite potrebne podatke. Vključite lahko ime dejavnosti, opis in druge podrobnosti, ki jih želite dodati. Ko je nova dejavnost dodana, se bo pojavila v urejevalniku.</value>
+    <value>Dodajanje nove naloge je preprosto - samo kliknite gumb »Dodaj nalogo« in izpolnite potrebne podatke. Vključite lahko ime naloge, opis in druge podrobnosti, ki jih želite dodati. Ko je nova naloga dodana, se bo pojavila v urejevalniku.</value>
   </data>
   <data name="p4" xml:space="preserve">
-    <value>Če morate spremeniti obstoječo dejavnost, preprosto kliknite gumb 'Uredi' poleg informacij o dejavnosti. Po potrebi lahko spremenite ime dejavnosti, opis ali druge podrobnosti. Ko končate, samo kliknite gumb »Shrani spremembe«.</value>
+    <value>Če morate spremeniti obstoječo nalogo, preprosto kliknite gumb 'Uredi' poleg informacij o nalogi. Po potrebi lahko spremenite ime naloge, opis ali druge podrobnosti. Ko končate, samo kliknite gumb »Shrani spremembe«.</value>
   </data>
   <data name="p5" xml:space="preserve">
-    <value>Če morate odstraniti dejavnost, lahko to storite s klikom na gumb »Izbriši« poleg informacij o dejavnosti. Prikaže se potrditveni poziv in ko bo potrjena, bo dejavnost trajno odstranjena iz urejevalnika.</value>
+    <value>Če morate odstraniti nalogo, lahko to storite s klikom na gumb »Izbriši« poleg informacij o nalogi. Prikaže se potrditveni poziv in ko bo potrjena, bo naloga trajno odstranjena iz urejevalnika.</value>
   </data>
   <data name="p6" xml:space="preserve">
-    <value>S stranjo Urejevalnik dejavnosti imate popoln nadzor nad dejavnostmi, ki jih morajo opraviti tekmovalne ekipe v vašem dogodku. Uporabite ga za organizacijo in vzdrževanje informacij o dejavnosti, kar zagotavlja nemoten in uspešen športni dogodek.</value>
+    <value>S stranjo Urejevalnik nalog imate popoln nadzor nad nalogami, ki jih morajo opraviti tekmovalne ekipe v vašem dogodku. Uporabite ga za organizacijo in vzdrževanje informacij o nalogah, kar zagotavlja nemoten in uspešen športni dogodek.</value>
   </data>
   <data name="PageTitle" xml:space="preserve">
-    <value>Urejevalnik dejavnosti</value>
+    <value>Urejevalnik nalog</value>
   </data>
   <data name="Points" xml:space="preserve">
     <value>Točke</value>
@@ -229,18 +229,18 @@
     <value>Rekviziti</value>
   </data>
   <data name="SuccessToast" xml:space="preserve">
-    <value>Dejavnosti uspešno izbrisane!</value>
+    <value>Naloge uspešno izbrisane!</value>
   </data>
   <data name="Time" xml:space="preserve">
     <value>Čas</value>
   </data>
   <data name="TotalItems" xml:space="preserve">
-    <value>skupno postavk</value>
+    <value>skupno</value>
   </data>
   <data name="UniqueIdentifier" xml:space="preserve">
     <value>Enolični identifikator</value>
   </data>
   <data name="WarningToast" xml:space="preserve">
-    <value>Dejavnosti ni mogoče izbrisati zaradi obstoječih rezultatov dejavnosti ali uporabnikov z dovoljenji za dejavnost!</value>
+    <value>Naloge ni mogoče izbrisati zaradi obstoječih rezultatov ali uporabnikov z dovoljenji za nalogo!</value>
   </data>
 </root>
