--- a/SportsOrganizer.Server/Resources/Pages/User/ActivityResultsOverviewSelector.fr.resx
+++ b/SportsOrganizer.Server/Resources/Pages/User/ActivityResultsOverviewSelector.fr.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="String1" xml:space="preserve">
+  <data name="PageTitle" xml:space="preserve">
     <value>Sélecteur de présentation des résultats d'activité</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Choisissez une activité pour l'aperçu des résultats</value>
   </data>
 </root>
