--- a/SportsOrganizer.Server/Resources/Pages/User/ActivityResultsOverviewSelector.sl.resx
+++ b/SportsOrganizer.Server/Resources/Pages/User/ActivityResultsOverviewSelector.sl.resx
@@ -117,7 +117,10 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="String1" xml:space="preserve">
-    <value>Izbirnik pregleda rezultatov</value>
+  <data name="PageTitle" xml:space="preserve">
+    <value>Izbirnik pregleda rezultatov dejavnosti</value>
+  </data>
+  <data name="Title" xml:space="preserve">
+    <value>Izberite dejavnost za pregled rezultatov</value>
   </data>
 </root>
